[Qt] QNX build fails due to missing timegm declaration https://bugs.webkit.org/show_bug.cgi?id=93842

Patch by Milian Wolff <milian.wolff@kdab.com> on 2012-08-17
Reviewed by Simon Hausmann.

On QNX, timegm is declared in nbutils.h and one must link against
nbutils to use it.

* WTF.pri:
* wtf/DateMath.cpp:

Canonical link: https://commits.webkit.org/112128@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125877 268f45cc-cd09-0410-ab3c-d52691b4dbfc