Source/WTF/WTF.pri
@@ -31,3 +31,8 @@ win32-* {
     LIBS += -lwinmm
     LIBS += -lgdi32
 }
+
+qnx {
+    # required for timegm
+    LIBS += -lnbutil
+}
